# ruffle4consoles

./: .gitignore  Cargo.toml  README.md  aarch64-nintendo-switch.json  aarch64_nintendo_switch.ld  build.rs  build_native.sh  build_nx.sh  build_nx_debug.sh  build_nx_release.sh  build_psp2.sh  main.rs
.cargo/: config.toml
.github/workflows/: build.yml
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/src/main/res/values/: strings.xml
egui-sdl2-event/: Cargo.toml
egui-sdl2-event/src/: lib.rs
frontend-utils/: Cargo.toml
frontend-utils/src/backends/: executor.rs  navigator.rs
frontend-utils/src/backends/navigator/: fetch.rs
ruffle_render_glow/: Cargo.toml
ruffle_render_glow/shaders/: color.vert  texture.vert
ruffle_render_glow/src/: lib.rs
ruffle_render_glow/src/context3d/: mod.rs
src/: app.rs  audio.rs  custom_event.rs  lib.rs  log.rs  main.rs  switch_shim.rs
src/app/: audio.rs  input.rs  log.rs
src/backends/: log.rs  mod.rs  navigator.rs  storage.rs  ui.rs
