[package]
name = "ruffle4consoles"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.38.0", features = ["static-link", "use-pkgconfig"] }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "aac",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", branch = "master" }
ruffle_render_glow = { path = "ruffle_render_glow" }
ruffle_frontend_utils = { path = "frontend-utils" }
anyhow = "1.0"
glow = { git = "https://github.com/grovesNL/glow", branch = "main", features = []}
ron = "0.11.0"
serde = "1.0.225"
tracing = { version = "0.1.41", features = ["log"] }
url = "2.5.7"

[package.metadata.vita]
title_id = "RUFFLVITA"
title_name = "Ruffle"
build_std = "std,panic_abort"
#strip_symbols = true

[profile.vita]
inherits = "release"
opt-level = 3
strip = "none"
debug = false
lto = false
codegen-units = 1
incremental = false
panic = "abort"

[profile.switch]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"
