[package]
name = "ruffle4consoles"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl2 = { version = "0.38.0", features = ["static-link", "use-pkgconfig"] }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "aac",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", branch = "master" }
ruffle_frontend_utils = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = ["fs"] }
glow = { git = "https://github.com/grovesNL/glow", branch = "main", features = []}
ruffle_render_glow = { path = "ruffle_render_glow" }
anyhow = "1.0"
tracing = { version = "0.1.41", features = ["log"] }
url = "2.5.7"
