[package]
name = "ruffle_frontend_utils"
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
edition = "2021"
homepage = "https://ruffle.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruffle-rs/ruffle"
version = "0.1.0"

[lints.rust]
# Clippy nightly often adds new/buggy lints that we want to ignore.
# Don't warn about these new lints on stable.
renamed_and_removed_lints = "allow"
unknown_lints = "allow"

[lints.clippy]
# LONG-TERM: These lints are unhelpful.
manual_map = "allow"             # Less readable: Suggests `opt.map(..)` instead of `if let Some(opt) { .. }`
manual_range_contains = "allow"  # Less readable: Suggests `(a..b).contains(n)` instead of `n >= a && n < b`
assigning_clones = "allow"       # Sometimes useful, but more often than not it doesn't do anything as
                                 # we overwrite an empty item. And sometime

[features]
cpal = ["dep:cpal", "dep:bytemuck"]

[dependencies]
toml_edit = { version = "0.22.27", features = ["parse"] }
url = "2.5.2"
tracing = "0.1.41"
thiserror = "2.0.16"
zip = { version = "5.0.0", default-features = false, features = ["deflate"] }
urlencoding = "2.1.3"
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", default-features = false }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", default-features = false }
async-channel = "2.5.0"
slotmap = "1.0.7"
#async-io = "2.4.1"
#futures-lite = "2.6.1"
#smol = "2.0.2"
#tokio = { workspace = true, features = ["net"] }
cpal = { version = "0.15.3", optional = true }
bytemuck = { version = "1.23.2", optional = true }

[dev-dependencies]
tempfile = "3.21.0"
#tokio = { workspace = true, features = ["macros", "rt"] }
macro_rules_attribute = "0.2.2"
